--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context="com.outerspace.daggerscone.MainActivity">
 
     <TextView
+        android:id="@+id/intro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/intro"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.v4.widget.Space
+        android:id="@+id/left_spacer"
+        android:background="#FFFFDDDD"
+        android:layout_width="8dp"
+        android:layout_height="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/intro"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/txt_first_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/first_name"
+        app:layout_constraintLeft_toRightOf="@id/left_spacer"
+        app:layout_constraintTop_toBottomOf="@id/left_spacer"/>
+
+    <EditText
+        android:id="@+id/first_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/txt_first_name"
+        app:layout_constraintLeft_toRightOf="@id/left_spacer"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/txt_last_name_f"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/last_name_f"
+        app:layout_constraintLeft_toRightOf="@id/left_spacer"
+        app:layout_constraintTop_toBottomOf="@id/first_name"/>
+
+    <EditText
+        android:id="@+id/last_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/txt_last_name_f"
+        app:layout_constraintLeft_toRightOf="@id/left_spacer"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/txt_last_name_m"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/last_name_m"
+        app:layout_constraintLeft_toRightOf="@id/left_spacer"
+        app:layout_constraintTop_toBottomOf="@id/last_name"/>
+
+    <EditText
+        android:id="@+id/last_name_m"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/txt_last_name_m"
+        app:layout_constraintLeft_toRightOf="@id/left_spacer"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
