--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,5 +75,14 @@
         app:layout_constraintRight_toRightOf="parent"
         />
 
+    <Button
+        android:id="@+id/btn_change_person"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_change_person"
+        android:onClick="onClickBtnChangePerson"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
